# RECO

assignment_A/: .coverage  README.md  pytest.ini  requirements.txt  setup.py
assignment_A/.github/workflows/: ci.yml
assignment_A/[2026 ICT_리코] smaple_data_ocr/__MACOSX/: ._sample_01.json  ._sample_02.json
assignment_A/docs/: DESIGN.md
assignment_A/examples/output/: sample_01_result.json  sample_02_result.json  sample_results.csv
assignment_A/src/weighing_parser/: __init__.py  __main__.py  config.py  exceptions.py  logging.py  main.py  parser.py
assignment_A/src/weighing_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assignment_A/src/weighing_parser/extractors/: __init__.py  base.py  company.py  contact.py  date.py  document_type.py  location.py  vehicle.py  weights.py
assignment_A/src/weighing_parser/models/: __init__.py  enums.py  ocr_input.py  receipt.py  weight.py
assignment_A/src/weighing_parser/normalizers/: __init__.py  datetime.py  numbers.py  text.py
assignment_A/src/weighing_parser/output/: __init__.py  csv_writer.py  json_writer.py
assignment_A/src/weighing_parser/validators/: __init__.py  confidence.py  weights.py
assignment_A/tests/: __init__.py  conftest.py
assignment_A/tests/integration/: __init__.py  test_parser.py
assignment_A/tests/unit/: __init__.py  test_config.py  test_domain.py  test_edge_cases.py  test_exceptions.py  test_extractors.py  test_logging.py  test_normalizers.py  test_validators.py  test_weight.py
assignment_B/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
assignment_B/.github/workflows/: ci.yml
assignment_B/config/: selectors.yaml
assignment_B/docs/: DESIGN.md
assignment_B/examples/output/: bid_notices_sample.csv  bid_notices_sample.json
assignment_B/src/bid_crawler/: __init__.py  __main__.py  config.py  crawler.py  exceptions.py  main.py
assignment_B/src/bid_crawler/models/: __init__.py  bid_notice.py  crawl_state.py
assignment_B/src/bid_crawler/scheduler/: __init__.py  cron.py
assignment_B/src/bid_crawler/scrapers/: __init__.py  base.py  detail_scraper.py  list_scraper.py
assignment_B/src/bid_crawler/storage/: __init__.py  csv_storage.py  json_storage.py  repository_interface.py  state_manager.py
assignment_B/src/bid_crawler/utils/: __init__.py  browser.py  logger.py  metrics.py  parser.py  retry.py  robots_checker.py
assignment_B/tests/: conftest.py
assignment_B/tests/integration/: test_crawler.py
assignment_B/tests/unit/: __init__.py  test_config.py  test_domain.py  test_logger.py  test_metrics.py  test_models.py  test_parser.py  test_retry.py  test_robots_checker.py  test_scrapers.py  test_storage.py  test_utils.py
